[package]
name = "n2qr"
version = "0.1.0"
author = "Wm. A. Rhodes <warhodes@gmail.com>"
description = "Terminal QR code printer"

readme = "README.md"
repository = "..."

rust-version = "1.61.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrcode-generator = { version = "4.1.6", default-features = false }
qrcodegen = "1.8.0"

clap = { version = "3.2.12", features = ["derive"] }

colored = "2"

